<resources>
    <string name="app_name">InventoryAppStage1</string>
    <string name="action_settings">Settings</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="add_product">Add Product</string>
</resources>
