<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".AddProductActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edit_pro_name"
        android:hint="@string/product_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        />
    <EditText
        android:id="@+id/edit_pro_price"
        android:hint="@string/price"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edit_pro_quantity"
        android:hint="@string/quantity"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edit_pro_sup_name"
        android:hint="@string/supplier_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        />
    <EditText
        android:id="@+id/edit_pro_sup_phone"
        android:hint="@string/supplier_phone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/add_product"/>


</LinearLayout>